turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: STOP is already defined as value STOP
val STOP = 0
    ^Turmite:4: error: STOP  is already defined as value STOP
val STOP = 0
    ^Turmite:22: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setCouleurBrosse()= COULEURSUIV
  ^Turmite:24: error: not found: value levebrosse
  levebrosse()    
  ^